Added configuration convenience settings

--- a/instrument_recognition/TuneTracer_InstrumentRecognizer.ipynb
+++ b/instrument_recognition/TuneTracer_InstrumentRecognizer.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "pgWjv0FdHA-g"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +20,35 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Instrument Recognizer V1\n",
+        "\n",
+        "### *Configuration Class for convenience to utilize run-all operations*"
+      ],
+      "metadata": {
+        "id": "lmcSzNQmTvZx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Config:\n",
+        "    # Specify whether to load the dataset directly or save it to local storage or Google Drive\n",
+        "    LOAD_DATASET_TRAIN = False\n",
+        "    LOAD_DATASET_TEST = False\n",
+        "    LOCAL_DATASET_PATH = \"/content/Irmas_TestData\"\n",
+        "    GOOGLE_DRIVE_DATASET_PATH = \"/content/drive/MyDrive/dataset/IRMAS_dataset\"\n",
+        "    #PLEASE SET BEFORE RUN-ALL:\n",
+        "    dataset_folder = LOCAL_DATASET_PATH"
+      ],
+      "metadata": {
+        "id": "hqhZe2vSPFJm"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Get Dataset\n",
         "Going to start with the IRMAS dataset with potential intentions to move to Google's NSynth dataset."
       ],
@@ -27,26 +59,15 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "if Config.dataset_folder == Config.GOOGLE_DRIVE_DATASET_PATH:\n",
+        "  from google.colab import drive\n",
+        "  drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2IBaVEn0u0IR",
-        "outputId": "9930b792-daf3-443b-a331-014be1ff3d09"
+        "id": "2IBaVEn0u0IR"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": 74,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -100,31 +121,14 @@
       "metadata": {
         "id": "QMz1PXIuAzkF"
       },
-      "execution_count": 33,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset_folder = '/content/drive/MyDrive/dataset/IRMAS_dataset'\n",
-        "\n",
-        "# Ensure all parent directories exist\n",
-        "os.makedirs(os.path.dirname(dataset_folder), exist_ok=True)\n",
-        "\n",
-        "# Now create the target directory\n",
-        "if not os.path.exists(dataset_folder):\n",
-        "    os.makedirs(dataset_folder)\n"
-      ],
-      "metadata": {
-        "id": "k8SqRw4t1Ijx"
-      },
-      "execution_count": 2,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## This will install the dataset to your google drive."
+        "## Download Training Data\n",
+        "Set the configuration at the top of the page"
       ],
       "metadata": {
         "id": "pgWjv0FdHA-g"
@@ -133,21 +137,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# URL to download the dataset\n",
-        "url = 'https://zenodo.org/record/1290750/files/IRMAS-TrainingData.zip'\n",
+        "if(Config.LOAD_DATASET_TRAIN):\n",
+        "  dataset_folder = Config.dataset_folder\n",
         "\n",
-        "# Path where you want to save the dataset\n",
-        "dataset_zip_path = os.path.join(dataset_folder, 'IRMAS-TrainingData.zip')\n",
+        "  # Ensure all parent directories exist\n",
+        "  os.makedirs(os.path.dirname(dataset_folder), exist_ok=True)\n",
         "\n",
-        "# Download the dataset\n",
-        "wget.download(url, dataset_zip_path)\n",
+        "  # Now create the target directory\n",
+        "  if not os.path.exists(dataset_folder):\n",
+        "      os.makedirs(dataset_folder)\n",
         "\n",
-        "# Unzip the dataset\n",
-        "with zipfile.ZipFile(dataset_zip_path, 'r') as zip_ref:\n",
-        "    zip_ref.extractall(dataset_folder)\n",
+        "  # URL to download the dataset\n",
+        "  url = 'https://zenodo.org/record/1290750/files/IRMAS-TrainingData.zip'\n",
         "\n",
-        "# Remove the zip file after extraction\n",
-        "os.remove(dataset_zip_path)\n"
+        "  # Path where you want to save the dataset\n",
+        "  dataset_zip_path = os.path.join(dataset_folder, 'IRMAS-TrainingData.zip')\n",
+        "\n",
+        "  # Download the dataset\n",
+        "  wget.download(url, dataset_zip_path)\n",
+        "\n",
+        "  # Unzip the dataset\n",
+        "  with zipfile.ZipFile(dataset_zip_path, 'r') as zip_ref:\n",
+        "      zip_ref.extractall(dataset_folder)\n",
+        "\n",
+        "  # Remove the zip file after extraction\n",
+        "  os.remove(dataset_zip_path)\n"
       ],
       "metadata": {
         "id": "Ph536qnY4_TK"
@@ -158,7 +172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## This will download the testset to a local folder that gets removed at the end of the session.\n",
+        "## Download Test Data\n",
         "Currently, the provided test set is in a completely different format from the training set. Would make more sense for subsequent builds to split a test set off from the training set at the very beginning."
       ],
       "metadata": {
@@ -168,31 +182,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# URL to download the test dataset\n",
-        "test_dataset_url = 'https://zenodo.org/record/1290750/files/IRMAS-TestingData-Part1.zip'\n",
+        "if(Config.LOAD_DATASET_TEST):\n",
+        "  # URL to download the test dataset\n",
+        "  test_dataset_url = 'https://zenodo.org/record/1290750/files/IRMAS-TestingData-Part1.zip'\n",
         "\n",
-        "# Path to save the downloaded zip file\n",
-        "test_dataset_zip_path = os.path.join(\"Irmas_TestData\", 'IRMAS-TestingData-Part1.zip')\n",
+        "  # Path to save the downloaded zip file\n",
+        "  test_dataset_zip_path = os.path.join(\"Irmas_TestData\", 'IRMAS-TestingData-Part1.zip')\n",
         "\n",
-        "# Create the directory if it doesn't exist\n",
-        "os.makedirs(\"Irmas_TestData\", exist_ok=True)\n",
+        "  # Create the directory if it doesn't exist\n",
+        "  os.makedirs(\"Irmas_TestData\", exist_ok=True)\n",
         "\n",
-        "# Download the test dataset\n",
-        "wget.download(test_dataset_url, test_dataset_zip_path)\n",
+        "  # Download the test dataset\n",
+        "  wget.download(test_dataset_url, test_dataset_zip_path)\n",
         "\n",
-        "# Unzip the test dataset\n",
-        "with zipfile.ZipFile(test_dataset_zip_path, 'r') as zip_ref:\n",
-        "    zip_ref.extractall(\"Irmas_TestData\")\n",
+        "  # Unzip the test dataset\n",
+        "  with zipfile.ZipFile(test_dataset_zip_path, 'r') as zip_ref:\n",
+        "      zip_ref.extractall(\"Irmas_TestData\")\n",
         "\n",
-        "# Remove the zip file after extraction\n",
-        "os.remove(test_dataset_zip_path)\n",
+        "  # Remove the zip file after extraction\n",
+        "  os.remove(test_dataset_zip_path)\n",
         "\n",
-        "# Verify if the test dataset folder is created\n",
-        "test_dataset_folder = os.path.join(\"Irmas_TestData\", 'IRMAS-TestingData-Part1')\n",
-        "if os.path.exists(test_dataset_folder):\n",
-        "    print(\"Test dataset directory created successfully!\")\n",
-        "else:\n",
-        "    print(\"Error creating test dataset directory.\")"
+        "  # Verify if the test dataset folder is created\n",
+        "  test_dataset_folder = os.path.join(\"Irmas_TestData\", 'IRMAS-TestingData-Part1')\n",
+        "  if os.path.exists(test_dataset_folder):\n",
+        "      print(\"Test dataset directory created successfully!\")\n",
+        "  else:\n",
+        "      print(\"Error creating test dataset directory.\")"
       ],
       "metadata": {
         "colab": {
@@ -242,6 +257,7 @@
         "\n",
         "        return np.array(X_train), np.array(y_train)\n",
         "\n",
+        "    #TODO: This function needs rewritten to account for multilabels as well as label format in text\n",
         "    def load_test_data(self):\n",
         "        X_test = []\n",
         "        y_test = []\n",
@@ -269,7 +285,7 @@
       "metadata": {
         "id": "n9cVrPvKAty4"
       },
-      "execution_count": 15,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -539,7 +555,7 @@
         "              metrics=['accuracy'])\n",
         "callbacks = [\n",
         "    keras.callbacks.ModelCheckpoint(\n",
-        "        filepath=\"best_model_1.keras\",\n",
+        "        filepath=\"best_model_2.keras\",\n",
         "        save_bast_only=True,\n",
         "        monitor=\"val_loss\"\n",
         "    )\n",
@@ -549,7 +565,7 @@
         "X_train_f, X_val_f, y_train_f, y_val_f = train_test_split(X_train_spectrograms_normalized, y_train_one_hot, test_size=0.2, random_state=42)\n",
         "\n",
         "# Train the model\n",
-        "history = model.fit(X_train_f, y_train_f, epochs=20, validation_data=(X_val_f, y_val_f), callbacks=callbacks)"
+        "history = model.fit(X_train_f, y_train_f, epochs=10, validation_data=(X_val_f, y_val_f), callbacks=callbacks)"
       ],
       "metadata": {
         "id": "tzgOKXzhX8oI",
